[gd_scene load_steps=10 format=2]

[ext_resource path="res://FirstApp/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://FirstApp/GalaxianFighter.png" type="Texture" id=2]
[ext_resource path="res://FirstApp/Play.png" type="Texture" id=3]
[ext_resource path="res://FirstApp/Play2.png" type="Texture" id=4]
[ext_resource path="res://FirstApp/Exit2.png" type="Texture" id=5]
[ext_resource path="res://FirstApp/Exit.png" type="Texture" id=6]
[ext_resource path="res://titleScreen.gd" type="Script" id=7]
[ext_resource path="res://FirstApp/Skinbutton.png" type="Texture" id=8]
[ext_resource path="res://FirstApp/Skinbuttoncolor.png" type="Texture" id=9]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 518.268, 301.853 )
scale = Vector2( 0.410515, 0.390376 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 440.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
show_behind_parent = true
margin_top = 104.0
margin_right = 800.0
margin_bottom = 440.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 232.0
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 800.0
margin_bottom = 336.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
